centered the guess boxes but the issue is that they are very squished, and the borders are not evenly aligned

--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,18 @@ select {
 }
 
 .guessing-area {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+}
+
+.computer-guess {
+  border: 1px solid rgb(0, 0, 0);
+}
+
+.human-guess {
+  border: 1px solid rgb(0, 0, 0);
 }
 
 .instructions {
